--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,14 @@
     <string name="app_name">MobileClient</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter">Войти</string>
+    <string name="authorization_text_1">Введите номер телефона, чтобы войти или зарегистрироваться</string>
+    <string name="authorization_text_2">Номер телефона</string>
+    <string name="number_phone">+79967003444</string>
+    <string name="user_agreement">Нажимая кнопку «Далее», вы соглашаетесь с условивыи Пользовательского сослашения и с обработкой вашей персональной информации на условинх Политики конфиденщиальности.</string>
+    <string name="further">Далее</string>
+    <string name="phone_confirmation">Подтверждение телефона</string>
+    <string name="confirmation_phone_text_1">Введите код из СМС отправленного на номер %s</string>
+    <string name="code_stars">****</string>
+    <string name="confirmation_phone_text_2">Отправить код ещё раз</string>
 </resources>
