Закончил работу с первыми двумя формами

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="code_stars">****</string>
     <string name="confirmation_phone_text_2">Отправить код ещё раз</string>
     <string name="error">Ошибка, возможно проблема частых запросов </string>
+    <string name="invalid_code">Неверный код подтверждения</string>
 </resources>
