--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="error">Ошибка, возможно проблема частых запросов </string>
     <string name="invalid_code">Неверный код подтверждения</string>
     <string name="expand">Развернуть</string>
+    <string name="by_with_cashback">Купить с кешбэком</string>
 </resources>
