--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="text_view_9">до 12,00%</string>
     <string name="text_view_10">до 12,00%</string>
     <string name="text_view_12">Условия</string>
+    <string name="percent_text_view">62,30%</string>
 </resources>
